tests/ui/weird_edge_cases/arg_missmatch.stderr
error: tuple pattern does not match `int`
 --> tests/ui/weird_edge_cases/arg_missmatch.rs:7:26
  |
7 |             #[expand(for (A, B) in [(1, 2), (3)])]
  |                          ^^^^^^
